@@ -20,6 +20,8 @@ Version 1.8.3
        absolute paths. (Stefan)
 - BUG: Issue #565: spurious NUL chars
        shown in blame. (Stefan)
+- BUG: Issue #566: Wrong encoding detection
+       in TortoiseBlame. (Stefan)
 - NEW: Issue #551: Remember the 'ignore ancestry'
        option. (Stefan)
 - NEW: Issue #552: Tri-State checkbox handling
